# clang-highlight

./: .editorconfig  .gitignore  .kateproject  .pre-commit-config.yaml  CMakeLists.txt  README.md  clang_highlight.cpp  clang_highlight.py  lsp_client.py  pyproject.toml
.github/workflows/: python-build.yaml
cmake/: GitVersion.cmake
doc/: .gitignore  build.sh  conf.py  doc.css  example.cpp  index.rst
src/: clang_highlight.cpp
src/clang_highlight/: __init__.py  data.py  main.py  map_stl.py  output.py  postprocessing.py
tests/: CMakeLists.txt  tests.py
tools/: .gitignore  collect_stl_calls.py  generate_stl_overloads.py  highlight_with_stl.py  map_stl.py
tools/ci-docker/: Dockerfile  compile_and_test.sh
tools/wheel_builder/: Dockerfile
