[build-system]
requires = ["scikit-build-core>=0.10", "setuptools-scm"]
build-backend = "scikit_build_core.build"

[project]
name = "clang-highlight"
authors = [
  {name = "Max Schwarz", email = "max.schwarz@online.de"},
]
description = "Highlight C/C++ code using information from clang's AST"
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",

  "Topic :: Text Processing :: Filters",
  "Topic :: Utilities",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.10",
]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
  "dacite>=1.8.1",
  "lxml>=5.3.0",
  "requests>=2.32.3",
  "tqdm",
]

[project.scripts]
clang-highlight = "clang_highlight.main:main"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.py-api = "py3"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]  # Section required

[dependency-groups]
dev = [
    "docutils>=0.21.2",
    "jinja2>=3.1.5",
    "pre-commit>=4.0.1",
    "pygments>=2.19.1",
    "ruff>=0.9.2",
]
ide = [
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.12.0",
]
